@@ -51,5 +51,6 @@ Plack::Runner->new->run($app);
 
 # > curl http://localhost:5000/
 # <!DOCTYPE html>
-# <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><style type="text/css">.my-class{border:1px solid black;}
+# <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><style type="text/css">
+# .my-class{border:1px solid black;}*{box-sizing:border-box;margin:0;padding:0;}
 # </style></head><body><div class="my-class">1,2</div></body></html>
